@@ -1,3 +1,8 @@
+2005-02-10  Graydon Hoare  <graydon@redhat.com>
+
+	* Makefile.am: Fix library build breakage.
+	* Makefile.in: Regenerate.
+
 2005-02-10  Michael Koch  <konqueror@gmx.de>
 
 	* javax/swing/JTabbedPane.java
